--- a/src/UI/CardsGrid/CardsGrid.module.scss
+++ b/src/UI/CardsGrid/CardsGrid.module.scss
@@ -3,3 +3,9 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
 }
+
+@media (max-width: 768px) {
+  .grid {
+    grid-template-columns: 100%;
+  }
+}
