--- a/src/UI/SearchField/SearchField.module.scss
+++ b/src/UI/SearchField/SearchField.module.scss
@@ -15,6 +15,7 @@
     cursor: text;
     padding: 0;
     border-bottom: 1px solid transparent;
+    color: var(--txt);
 
     &:focus {
       border-color: var(--grayDarken);
