--- a/src/UI/TableCell/TableCell.module.scss
+++ b/src/UI/TableCell/TableCell.module.scss
@@ -7,4 +7,10 @@
     height: 100%;
     width: 100%;
   }
+
+  a {
+    font-weight: bold;
+    color: var(--txt);
+    text-decoration: underline;
+  }
 }
