--- a/src/UI/TableHeadCell/TableHeadCell.module.scss
+++ b/src/UI/TableHeadCell/TableHeadCell.module.scss
@@ -2,4 +2,14 @@
   padding: 20px 20px;
   text-align: left;
   font-weight: 600;
+
+  & > div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  button + button {
+    margin-left: -5px;
+  }
 }
