--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -3,12 +3,17 @@
     var(--containerPd);
   background-color: var(--sidebarbg);
   height: 100%;
+  position: relative;
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
 }
 
 .logo {
   width: 48px;
   height: 48px;
-  margin-bottom: 50px;
 
   img {
     width: 100%;
@@ -64,6 +69,32 @@
       &:hover {
         background-color: var(--grayDarkenPlus);
       }
+    }
+  }
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translateX(-120%);
+    opacity: 0;
+    transition: transform 0.3s ease;
+
+    &.active {
+      transform: translateX(0);
+      opacity: 1;
+      z-index: 2;
+      padding-top: 100px;
+      min-width: 200px;
     }
   }
 }
